# calyp-deployment

cmake-helper/: BuildPkg.cmake  CMakeLists.txt
debian/: README.Debian  README.source  calyp-daily.install  calyp-tools-daily.install  calyp-tools.install  calyp.install  changelog  control  copyright  libcalyp-dev.install  rules  watch
scripts/: build-linux.bash  build-windows.bat  deploy-to-github.bat  extract_ffmpeg.bat
